--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
+  "overrides": {
+    "mini-css-extract-plugin": "2.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "mini-css-extract-plugin": "2.4.5"
   },
-
   "homepage": "https://cesmar.github.io/curso-intro-react"
 }
